--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,12 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  firebase_core: ^3.13.0
+  firebase_auth: ^5.5.3
+  cloud_firestore: ^5.6.7
+  flutter_riverpod: ^2.6.1
+  go_router: ^15.1.1
+  equatable: ^2.0.7
 
 dev_dependencies:
   flutter_test:
