--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,8 @@ dependencies:
   flutter_riverpod: ^2.6.1
   go_router: ^15.1.1
   equatable: ^2.0.7
+  flutter_svg: ^2.1.0
+  google_fonts: ^6.2.1
 
 dev_dependencies:
   flutter_test:
@@ -23,3 +25,9 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+
+  assets:
+    - assets/images/app_logo.svg
+    - assets/images/cricket_ground.svg
+    - assets/images/google_logo.svg
+    - assets/images/guest_icon.svg
