--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,8 @@ dependencies:
   equatable: ^2.0.7
   flutter_svg: ^2.1.0
   google_fonts: ^6.2.1
+  google_sign_in: ^6.3.0
+  logger: ^2.5.0
 
 dev_dependencies:
   flutter_test:
