--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,14 +30,6 @@ flutter:
   uses-material-design: true
 
   assets:
-    - assets/images/app_logo.svg
-    - assets/images/cricket_ground.svg
-    - assets/images/google_logo.svg
-    - assets/images/guest_icon.svg
-    - assets/images/batman_avatar.png
-    - assets/images/cricket_ball.svg
-    - assets/hand_gestures/0_left.png
-    - assets/hand_gestures/2_right.png
-    - assets/hand_gestures/3_left.png
-    - assets/images/helmet.svg
-    - assets/images/target.svg
+    - assets/images/
+    - assets/hand_gestures/
+
