--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   google_sign_in: ^6.3.0
   logger: ^2.5.0
   flutter_cache_manager: ^3.4.1
+  lottie: ^3.3.1
 
 dev_dependencies:
   flutter_test:
@@ -32,4 +33,5 @@ flutter:
   assets:
     - assets/images/
     - assets/hand_gestures/
+    - assets/animation/
 
