--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   logger: ^2.5.0
   flutter_cache_manager: ^3.4.1
   lottie: ^3.3.1
+  dio: ^5.8.0+1
 
 dev_dependencies:
   flutter_test:
