--- a/backend/package.json
+++ b/backend/package.json
@@ -15,12 +15,16 @@
   "description": "",
   "dependencies": {
     "@prisma/client": "^6.13.0",
+    "@socket.io/redis-adapter": "^8.3.0",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
-    "morgan": "^1.10.1"
+    "ioredis": "^5.8.2",
+    "morgan": "^1.10.1",
+    "redis": "^5.9.0",
+    "socket.io": "^4.8.1"
   },
   "devDependencies": {
-    "prisma": "^6.13.0",
-    "nodemon": "^3.1.10"
+    "nodemon": "^3.1.10",
+    "prisma": "^6.13.0"
   }
 }
