feat: Implement Socket.IO authentication middleware and game service logic
- Added socketAuthMiddleware for authenticating users during Socket.IO handshake.
- Developed gameService with functionalities for managing game state, processing player moves, and calculating results.
- Integrated Redis utility functions for managing game state and user status.
- Created OnlineGameProvider to handle game state and socket events in the Flutter app.
- Established GameSocketService for managing Socket.IO connections and game events.

--- a/.gitignore
+++ b/.gitignore
@@ -53,3 +53,9 @@ lib/firebase_options.dart
 
 # secure constants
 lib/core/contstants/secure_constants.dart
+
+/# Miscellaneous
+ARCHITECTURE_DIAGRAM.md
+IMPLEMENTATION_SUMMARY.md
+MULTIPLAYER_QUICKSTART.md
+PRELAUNCH_CHECKLIST.md
