--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   flutter_cache_manager: ^3.4.1
   lottie: ^3.3.1
   dio: ^5.8.0+1
+  socket_io_client: ^2.0.3+1
 
 dev_dependencies:
   flutter_test:
