--- a/backend/package.json
+++ b/backend/package.json
@@ -21,7 +21,8 @@
     "ioredis": "^5.8.2",
     "morgan": "^1.10.1",
     "redis": "^5.9.0",
-    "socket.io": "^4.8.1"
+    "socket.io": "^4.8.1",
+    "uuid": "^13.0.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.10",
