chore: update prisma client and dependencies to version 6.18.0
fix: ensure Firebase UID validation in auth_controller

feat: add user local and remote services for user management

refactor: enhance user model with stats and uid fields

fix: correct import paths for app constants in game providers

feat: implement user local service for persistent user storage

feat: create user remote service for API interactions

fix: update auth service to utilize new user services for login

chore: add shared_preferences dependency for local storage

fix: update GeneratedPluginRegistrant to include SharedPreferencesPlugin

--- a/.gitignore
+++ b/.gitignore
@@ -72,8 +72,11 @@ firebase-messaging-sw.local.js
 firebase.json
 firebase.
 
+# Ignore app constants file
+lib/core/constants/app_constants.dart
 # secure constants
 lib/core/contstants/secure_constants.dart
+
 
 /# Miscellaneous
 ARCHITECTURE_DIAGRAM.md
