--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   lottie: ^3.3.1
   dio: ^5.8.0+1
   socket_io_client: ^2.0.3+1
+  shared_preferences: ^2.5.3
 
 dev_dependencies:
   flutter_test:
